[gd_scene load_steps=22 format=3 uid="uid://c10mpleesvyhw"]

[ext_resource type="Script" path="res://scripts/slime.gd" id="1_hibe3"]
[ext_resource type="Texture2D" uid="uid://c10rctmt3amog" path="res://assets/brackeys_platformer_assets/sprites/slime_green.png" id="1_ydg4l"]
[ext_resource type="PackedScene" uid="uid://c1h67ikxdtgua" path="res://scenes/killzone.tscn" id="2_7mo5q"]
[ext_resource type="Script" path="res://scripts/damage.gd" id="4_3c84h"]
[ext_resource type="AudioStream" uid="uid://cysexk1p6utd0" path="res://assets/brackeys_platformer_assets/sounds/mush.wav" id="5_vtcd0"]
[ext_resource type="AudioStream" uid="uid://ddbkl30lbfeoc" path="res://assets/brackeys_platformer_assets/sounds/slimeDamage.wav" id="6_h43pr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5gmkk"]
atlas = ExtResource("1_ydg4l")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qenrk"]
atlas = ExtResource("1_ydg4l")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c8o3"]
atlas = ExtResource("1_ydg4l")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bdcq"]
atlas = ExtResource("1_ydg4l")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3bds"]
atlas = ExtResource("1_ydg4l")
region = Rect2(72, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qspiu"]
atlas = ExtResource("1_ydg4l")
region = Rect2(48, 48, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8622k"]
atlas = ExtResource("1_ydg4l")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gar81"]
atlas = ExtResource("1_ydg4l")
region = Rect2(24, 48, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_x6eag"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gmkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qenrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c8o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bdcq")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3bds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qspiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8622k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gar81")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqj65"]
size = Vector2(20, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucgv1"]
size = Vector2(20, 19)

[sub_resource type="Animation" id="Animation_mnplh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("killzone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("hurtSound:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}

[sub_resource type="Animation" id="Animation_3rx2p"]
resource_name = "died"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("killzone/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_qgjdv"]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurtSound:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"hurt", &"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62aor"]
_data = {
"RESET": SubResource("Animation_mnplh"),
"died": SubResource("Animation_3rx2p"),
"hurt": SubResource("Animation_qgjdv")
}

[node name="SlimeNode" type="Node2D"]
script = ExtResource("1_hibe3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_x6eag")
animation = &"hurt"
autoplay = "default"

[node name="killzone" parent="." instance=ExtResource("2_7mo5q")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_jqj65")
script = ExtResource("4_3c84h")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(11, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 5)
rotation = 3.14159
target_position = Vector2(11, 2.76566e-05)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_ucgv1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_62aor")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_vtcd0")
bus = &"SFX"

[node name="hurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h43pr")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
